syntax = "proto3";

package dataplane;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message TransferFromSnapshotToDiskRequest {
    string SrcSnapshotId = 1;
    types.Disk DstDisk = 2;
    types.EncryptionDesc DstEncryption = 3;
}

message TransferFromSnapshotToDiskTaskState {
    reserved 1;

    uint32 MilestoneChunkIndex = 2;
    uint32 TransferredChunkCount = 5;
    double Progress = 4;
    uint32 ChunkCount = 3;
}

message TransferFromSnapshotToDiskMetadata {
    double Progress = 1;
}
